--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -1,7 +1,11 @@
 .navbarOfQuiz{
   /* background-color: rgba(60, 58, 58, 0.4); */
-  position: stickey;
-
+  color: white;
+  background-color: black;
+  position: sticky;
+  top : 0px;
+  z-index : 2;
+height :80px;
 }
 *{
   font-family: 'Bree Serif', serif;
@@ -60,4 +64,14 @@ box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, rgb(51, 51, 51) 0px 0px 0px 10px;
   cursor: pointer;
   padding : 10px;
+}
+.custom-tooltip {
+  --bs-tooltip-bg: var(--bs-primary);
+}
+.headingCategories{
+  font-family: 'Rubik Moonrocks', cursive;
+  font-size: 50px;
+  color:white;
+  background-color: black;
+
 }
