--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -75,3 +75,9 @@ box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 
   background-color: black;
 
 }
+.adminControl{
+  background-image: url("https://media.istockphoto.com/vectors/programming-code-coding-or-hacker-background-programming-code-icon-vector-id1221190912");
+  background-size: cover;
+  width : 100%;
+  height : 89vh;
+}
