--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -81,3 +81,28 @@ box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 
   width : 100%;
   height : 89vh;
 }
+.questionHead{
+  width : 90%;
+  min-height: 30vh;
+  background-color: orange;
+  margin : auto;
+  padding : 30px;
+  border-radius: 20px;
+  margin : 20px
+}
+.questionBank{
+  width : 60%;
+  min-height : 40vh;
+  border : 2px solid black;
+  margin : 30px;
+  padding : 40px;
+}
+.optonsOfquestion{
+  width : 40%;
+  min-height: 10vh;
+  border : 1px solid green;
+  margin : 20px;
+  padding : 20px;
+  font-size: 30px;
+  text-align: left;
+}
