--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -108,6 +108,7 @@ box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 
 }
 body {
   background-color: #e4e4e4;
+  padding-bottom : 30px;
 }
 
 div {
@@ -129,6 +130,7 @@ div {
   align-items: center;
   justify-content: center;
   font-size: 24px;
+  /* white-space: pre-wrap; */
 }
 
 .results {
@@ -246,4 +248,17 @@ div {
 .disabled-answer {
   pointer-events: none;
   background-color: rgb(200, 205, 205);
+}
+.detailsDiv{
+  background-color: white;
+  color: black;
+  padding: 10px;
+  min-height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+
 }
