--- a/Frontend/src/Navbar/CategoriesOfCategories/CategoriesOfCategories.css
+++ b/Frontend/src/Navbar/CategoriesOfCategories/CategoriesOfCategories.css
@@ -11,6 +11,8 @@
     justify-content: space-evenly;
     cursor:pointer;
     padding-top: 0.5%;
+    /* margin-top: 5.2%; */
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 
 }
 
